tkg_tmc_to/cluster-1/07-elastic-stack/02-elastic-stack.yaml
---
# Source: elastic-stack/charts/elasticsearch/templates/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.0
    component: "client"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-elasticsearch-client

spec:
  ports:
    - name: http
      port: 9200
      targetPort: http
  selector:
    app: elasticsearch
    component: "client"
    release: tanzu-efk
  type: ClusterIP
---
# Source: elastic-stack/charts/elasticsearch/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.0
    component: "master"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-elasticsearch-discovery
spec:
  clusterIP: None
  ports:
    - port: 9300
      targetPort: transport
  selector:
    app: elasticsearch
    component: "master"
    release: tanzu-efk
---
# Source: elastic-stack/charts/kibana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
    chart: kibana-3.2.7
    release: tanzu-efk
    heritage: Helm
  name: tanzu-efk-kibana
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 5601
      protocol: TCP

  selector:
    app: kibana
    release: tanzu-efk
---
# Source: elastic-stack/charts/fluent-bit/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tanzu-efk-fluent-bit
  labels:
    app: fluent-bit
    chart: fluent-bit-2.8.0
    heritage: Helm
    release: tanzu-efk
spec:
  selector:
    matchLabels:
      app: fluent-bit
      release: tanzu-efk
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fluent-bit
        release: tanzu-efk
      annotations:
        checksum/config: 9b0fcb80391734f6d5576039f6a235868ec19d823b85a056f03037841f4e34a9
    spec:
      hostNetwork: false
      dnsPolicy: ClusterFirst
      serviceAccountName: tanzu-efk-fluent-bit
      containers:
        - name: fluent-bit
          image: "fluent/fluent-bit:1.3.2"
          imagePullPolicy: "Always"
          env: []
          resources: {}
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: config
              mountPath: /fluent-bit/etc/fluent-bit.conf
              subPath: fluent-bit.conf
            - name: config
              mountPath: /fluent-bit/etc/fluent-bit-service.conf
              subPath: fluent-bit-service.conf
            - name: config
              mountPath: /fluent-bit/etc/fluent-bit-input.conf
              subPath: fluent-bit-input.conf
            - name: config
              mountPath: /fluent-bit/etc/fluent-bit-filter.conf
              subPath: fluent-bit-filter.conf
            - name: config
              mountPath: /fluent-bit/etc/fluent-bit-output.conf
              subPath: fluent-bit-output.conf

      terminationGracePeriodSeconds: 10

      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: config
          configMap:
            name: tanzu-efk-fluent-bit-config
---
# Source: elastic-stack/charts/elasticsearch/templates/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.0
    component: "client"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-elasticsearch-client
spec:
  selector:
    matchLabels:
      app: elasticsearch
      component: "client"
      release: tanzu-efk
  replicas: 2
  template:
    metadata:
      labels:
        app: elasticsearch
        component: "client"
        release: tanzu-efk
      annotations:
        checksum/config: 65366bae1dfb0475a836bdc8bf671e0f2c84b5dc590ee2711898a4a819936918
    spec:
      serviceAccountName: tanzu-efk-elasticsearch-client
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: "elasticsearch"
                    release: "tanzu-efk"
                    component: "client"
      containers:
        - name: elasticsearch
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 90
          image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.2"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              name: config
              subPath: elasticsearch.yml
      volumes:
        - name: config
          configMap:
            name: tanzu-efk-elasticsearch
---
# Source: elastic-stack/charts/kibana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
    chart: "kibana-3.2.7"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
      release: tanzu-efk
  revisionHistoryLimit: 3
  template:
    metadata:
      annotations:
        checksum/config: a580e41cd4612edfeca9a37ec7da3a65afe3213dcd8ab499d9bbb195dec8d17c
      labels:
        app: kibana
        release: "tanzu-efk"
    spec:
      serviceAccountName: default
      containers:
        - name: kibana
          image: "docker.elastic.co/kibana/kibana-oss:6.7.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5601
              name: kibana
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: kibana
              mountPath: "/usr/share/kibana/config/kibana.yml"
              subPath: kibana.yml
      tolerations: []
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      volumes:
        - name: kibana
          configMap:
            name: tanzu-efk-kibana
---
# Source: elastic-stack/charts/elasticsearch/templates/data-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.0
    component: "data"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-elasticsearch-data
spec:
  selector:
    matchLabels:
      app: elasticsearch
      release: tanzu-efk
  serviceName: tanzu-efk-elasticsearch-data
  replicas: 2
  template:
    metadata:
      labels:
        app: elasticsearch
        component: "data"
        release: tanzu-efk
        role: data
    spec:
      serviceAccountName: tanzu-efk-elasticsearch-data
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: "elasticsearch"
                    release: "tanzu-efk"
                    component: "data"
      containers:
        - name: elasticsearch
          image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.2"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9300
              name: transport

          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 1536Mi
          readinessProbe:
            httpGet:
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 5
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              name: config
              subPath: elasticsearch.yml
            - name: config
              mountPath: /data-pre-stop-hook.sh
              subPath: data-pre-stop-hook.sh
            - name: config
              mountPath: /data-post-start-hook.sh
              subPath: data-post-start-hook.sh
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "/data-pre-stop-hook.sh"]
            postStart:
              exec:
                command: ["/bin/bash", "/data-post-start-hook.sh"]
      terminationGracePeriodSeconds: 3600
      volumes:
        - name: config
          configMap:
            name: tanzu-efk-elasticsearch
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "30Gi"
---
# Source: elastic-stack/charts/elasticsearch/templates/master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.0
    component: "master"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-elasticsearch-master
spec:
  selector:
    matchLabels:
      app: elasticsearch
      release: tanzu-efk
  serviceName: tanzu-efk-elasticsearch-master
  replicas: 3
  template:
    metadata:
      labels:
        app: elasticsearch
        component: "master"
        release: tanzu-efk
        role: master
    spec:
      serviceAccountName: tanzu-efk-elasticsearch-master
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: "elasticsearch"
                    release: "tanzu-efk"
                    component: "master"
      containers:
        - name: elasticsearch
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 5
          image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.2"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9300
              name: transport

          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              name: config
              subPath: elasticsearch.yml
      volumes:
        - name: config
          configMap:
            name: tanzu-efk-elasticsearch
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "4Gi"
---
# Source: elastic-stack/charts/elasticsearch/templates/client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tanzu-efk-elasticsearch-client
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.0
    component: "client"
    heritage: Helm
    release: tanzu-efk
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: "elasticsearch.cluster-1.poc.yogendra.me"
      http:
        paths:
          - path: /
            backend:
              serviceName: tanzu-efk-elasticsearch-client
              servicePort: 9200
---
# Source: elastic-stack/charts/kibana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  labels:
    app: kibana
    chart: "kibana-3.2.7"
    heritage: Helm
    release: tanzu-efk
  name: tanzu-efk-kibana
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  rules:
    - host: kibana.cluster-1.poc.yogendra.me
      http:
        paths:
          - path: /
            backend:
              serviceName: tanzu-efk-kibana
              servicePort: 443
---
# Source: elastic-stack/charts/elasticsearch/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tanzu-efk-elasticsearch-test
  labels:
    app: tanzu-efk-elasticsearch
    chart: "elasticsearch-1.32.0"
    heritage: "Helm"
    release: "tanzu-efk"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: tanzu-efk-test
      image: "dduportal/bats:0.4.0"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  volumes:
    - name: tests
      configMap:
        name: tanzu-efk-elasticsearch-test
    - name: tools
      emptyDir: {}
  restartPolicy: Never
---
# Source: elastic-stack/charts/fluent-bit/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tanzu-efk-fluent-bit-test
  labels:
    app: tanzu-efk-fluent-bit
    chart: "fluent-bit-2.8.0"
    heritage: "Helm"
    release: "tanzu-efk"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: tanzu-efk-test
      image: "dwdraju/alpine-curl-jq"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  volumes:
    - name: tests
      configMap:
        name: tanzu-efk-fluent-bit-test
    - name: tools
      emptyDir: {}
  restartPolicy: Never
---
# Source: elastic-stack/charts/kibana/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tanzu-efk-kibana-test
  labels:
    app: tanzu-efk-kibana
    chart: "kibana-3.2.7"
    heritage: "Helm"
    release: "tanzu-efk"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: tanzu-efk-test
      image: "dwdraju/alpine-curl-jq"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  volumes:
    - name: tests
      configMap:
        name: tanzu-efk-kibana-test
    - name: tools
      emptyDir: {}
  restartPolicy: Never
